# trivium

./: Cargo.toml  LICENSE  README.md
benches/: trivium.rs
src/: lib.rs
